add new website from server na

--- a/xem-phim-bo/the-gioi-hoan-my/index.html
+++ b/xem-phim-bo/the-gioi-hoan-my/index.html
@@ -1200,7 +1200,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             10
             </dd>
             <br/>
            </dl>
@@ -1582,7 +1582,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lust, Caution
             </span>
             <span class="list-top-movie-item-view">
-             65 lượt xem
+             67 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
             </span>
@@ -1604,31 +1604,9 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Dragon Hunting.Soul Suppressing Coffin
             </span>
             <span class="list-top-movie-item-view">
-             62 lượt xem
+             63 lượt xem
             </span>
             <span class="rate-vote rate-vote-10">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hùng Long Phong Bá (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Brothers For Life (Season 2)
-            </span>
-            <span class="list-top-movie-item-view">
-             53 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
             </span>
            </div>
           </a>
@@ -1648,7 +1626,29 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
+           <span class="status">
+            HD Thuyết Minh
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hung-long-phong-ba-phan-2-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hùng Long Phong Bá (Phần 2)
+            </span>
+            <span class="list-top-movie-item-en">
+             Brothers For Life (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1670,7 +1670,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
-             51 lượt xem
+             52 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1691,21 +1691,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ocean-giants" title="Ocean Giants">
+          <a class="list-top-movie-link" href="/phim-moi/batman-soul-of-the-dragon" title="Batman: Soul of the Dragon">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ocean-giants-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/batman-soul-of-the-dragon-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ocean Giants
+             Batman: Soul of the Dragon
             </span>
             <span class="list-top-movie-item-en">
-             Ocean Giants
+             Batman: Soul of the Dragon
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1713,62 +1713,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trung-doi" title="Trung Đội">
+          <a class="list-top-movie-link" href="/phim-moi/tap-lam-nguoi-xau-phan-1" title="Tập làm người xấu (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trung-doi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tap-lam-nguoi-xau-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trung Đội
+             Tập làm người xấu (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Platoon
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-ty-phu" title="Nữ Tỷ Phú">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-ty-phu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nữ Tỷ Phú
-            </span>
-            <span class="list-top-movie-item-en">
-             Woman Of 9.9 Billion
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mashimaro-phan-2" title="Mashimaro (Phần 2)">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mashimaro-phan-2-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Mashimaro (Phần 2)
-            </span>
-            <span class="list-top-movie-item-en">
-             Mashimaro (Season 2)
+             Breaking Bad (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1779,21 +1735,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thi-tran-toi-ac" title="Thị Trấn Tội Ác">
+          <a class="list-top-movie-link" href="/phim-moi/nu-hon-dau" title="Nụ Hôn Đầu">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-toi-ac-2010-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hon-dau-tho-nhi-ky-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thị Trấn Tội Ác
+             Nụ Hôn Đầu
             </span>
             <span class="list-top-movie-item-en">
-             The Town
+             First Kiss (Ilk Opucuk)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/ong-kinh-doc-dao" title="Ống Kính Độc Đáo">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-kinh-doc-dao-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Ống Kính Độc Đáo
+            </span>
+            <span class="list-top-movie-item-en">
+             Claire's Camera
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/upin-ipin-phan-15" title="Upin &amp; Ipin (Phần 15)">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/upin-and-ipin-phan-15-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Upin &amp; Ipin (Phần 15)
+            </span>
+            <span class="list-top-movie-item-en">
+             Upin &amp; Ipin (Season 15)
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
