add new website from server na

--- a/xem-phim-bo/the-gioi-hoan-my/index.html
+++ b/xem-phim-bo/the-gioi-hoan-my/index.html
@@ -1200,7 +1200,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             10
+             11
             </dd>
             <br/>
            </dl>
@@ -1612,28 +1612,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-en">
-             Angel Guts: Red Classroom
-            </span>
-            <span class="list-top-movie-item-view">
-             54 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/hung-long-phong-ba-phan-2" title="Hùng Long Phong Bá (Phần 2)">
            <span class="status">
             HD Thuyết Minh
@@ -1646,6 +1624,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Brothers For Life (Season 2)
+            </span>
+            <span class="list-top-movie-item-view">
+             54 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/天使のはらわた-赤い教室-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-en">
+             Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
              54 lượt xem
@@ -1691,21 +1691,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/batman-soul-of-the-dragon" title="Batman: Soul of the Dragon">
+          <a class="list-top-movie-link" href="/phim-moi/neu-co-the-tro-ve-luc-dau-thang-tram-trong-kinh-doanh" title="Nếu Có Thể Trở Về Lúc Đầu: Thăng Trầm Trong Kinh Doanh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/batman-soul-of-the-dragon-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/neu-co-the-tro-ve-luc-dau-thang-tram-trong-kinh-doanh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Batman: Soul of the Dragon
+             Nếu Có Thể Trở Về Lúc Đầu: Thăng Trầm Trong Kinh Doanh
             </span>
             <span class="list-top-movie-item-en">
-             Batman: Soul of the Dragon
+             If at First: Sailing in Business
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1713,40 +1713,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tap-lam-nguoi-xau-phan-1" title="Tập làm người xấu (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/quan-ao-moi-cua-cong-chua" title="Quần Áo Mới Của Công Chúa">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tap-lam-nguoi-xau-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-ao-moi-cua-cong-chua-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tập làm người xấu (Phần 1)
+             Quần Áo Mới Của Công Chúa
             </span>
             <span class="list-top-movie-item-en">
-             Breaking Bad (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-hon-dau" title="Nụ Hôn Đầu">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-hon-dau-tho-nhi-ky-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nụ Hôn Đầu
-            </span>
-            <span class="list-top-movie-item-en">
-             First Kiss (Ilk Opucuk)
+             The Princess’s New Clothes
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1757,18 +1735,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ong-kinh-doc-dao" title="Ống Kính Độc Đáo">
+          <a class="list-top-movie-link" href="/phim-moi/thi-tran-riverdale-phan-6" title="Thị Trấn Riverdale (Phần 6)">
            <span class="status">
-            HD Vietsub
+            FHD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ong-kinh-doc-dao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thi-tran-riverdale-phan-6-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ống Kính Độc Đáo
+             Thị Trấn Riverdale (Phần 6)
             </span>
             <span class="list-top-movie-item-en">
-             Claire's Camera
+             Riverdale (Season 6)
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1779,18 +1757,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/upin-ipin-phan-15" title="Upin &amp; Ipin (Phần 15)">
+          <a class="list-top-movie-link" href="/phim-moi/tre-gia-mang-moc" title="Tre già măng mọc">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/upin-and-ipin-phan-15-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tre-gia-mang-moc-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Upin &amp; Ipin (Phần 15)
+             Tre già măng mọc
             </span>
             <span class="list-top-movie-item-en">
-             Upin &amp; Ipin (Season 15)
+             Mighty Oak
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/5-ngay-chien-tran" title="5 Ngày Chiến Trận">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/5-ngay-chien-tran-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             5 Ngày Chiến Trận
+            </span>
+            <span class="list-top-movie-item-en">
+             5 Days of War
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
